SEEDSDT-591: Fix country dashboard menu alignment.

--- a/ui/src/scss/theme/_tabbed.scss
+++ b/ui/src/scss/theme/_tabbed.scss
@@ -67,7 +67,7 @@
     .label {
       div {
         height: 34px;
-        width: 100%;
+        width: 90%;
         display: flex;
         align-items: center;
         /*border-right: 3px solid $yellow;*/
@@ -100,7 +100,7 @@
       background-repeat: no-repeat;
       background-color: transparent;
       padding-left: calc(4em + 0.75rem);
-      width: 215px;
+      width: 204px;
       height: 75px;
       margin: 0;
       font-size: 14px;
